force-app/main/default/objects/User_Locale_Settings__mdt/User_Locale_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This is used to configure TimeZoneSidKey, LocaleSidKey, EmailEncodingKey, LanguageLocaleKey during user user cretion</description>
    <label>User Locale Settings</label>
</CustomObject>