force-app/main/default/objects/User_Locale_Settings__mdt/fields/EmailEncodingKey__c.field-meta.xml
<CustomField>
    <fullName>EmailEncodingKey__c</fullName>
    <description>This field is used to store the EmailEncodingKey of an user</description>
    <label>EmailEncodingKey</label>
    <length>200</length>
    <type>Text</type>
</CustomField>