force-app/main/default/objects/User_Locale_Settings__mdt/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <description>This field is used to store the LanguageLocaleKey of an user</description>
    <label>LanguageLocaleKey</label>
    <length>200</length>
    <type>Text</type>
</CustomField>