force-app/main/default/objects/User_Locale_Settings__mdt/fields/LocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>LocaleSidKey__c</fullName>
    <description>This field is used to store the LocaleSidKey of an user</description>
    <label>LocaleSidKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>