force-app/main/default/objects/User_Locale_Settings__mdt/fields/TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneSidKey__c</fullName>
    <description>This field is used to store the TimeZoneSidKey of an user</description>
    <label>TimeZoneSidKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>